--- a/Read/ReadMeWiki/00.方案实践/14.FPS检测设计实践.md
+++ b/Read/ReadMeWiki/00.方案实践/14.FPS检测设计实践.md
@@ -330,4 +330,15 @@
 
 
 
+#### 参考博客
+- 手淘 Android 帧率采集与监控详解
+    - https://mp.weixin.qq.com/s?__biz=Mzg4MjE5OTI4Mw==&mid=2247494823&idx=1&sn=8d57d026a618711b4b459ac60a1597ef&chksm=cf58f33bf82f7a2dd7a9d76cd30abf6b4622632518b0ff111c4facbcd4509d99c7fa499a7681&scene=178&cur_album_id=2495132597375975425#rd
+
+
+
+
+
+
+
+
 
