--- a/Read/ReadMeWiki/01.大型方案/22.日志打印和存储实践.md
+++ b/Read/ReadMeWiki/01.大型方案/22.日志打印和存储实践.md
@@ -246,7 +246,8 @@
     https://blog.csdn.net/ly0724ok/article/details/117450121/
 - Android中AIDL使用案例
     - https://www.jianshu.com/p/b174f14a2d2f
-
+- 货拉拉客户端通用日志组件 - Glog
+    - https://juejin.cn/post/7168662263337861133
 
 
 
