--- a/Read/ReadShareWiki/00.心怡宝贝/01.如何去制造惊喜.md
+++ b/Read/ReadShareWiki/00.心怡宝贝/01.如何去制造惊喜.md
@@ -7,6 +7,7 @@
 - 06.鲜花制造的惊喜
 - 07.做没尝试过事情
 - 08.求婚时候的仪式
+- 09.一些有趣的事情
 - 10.了解心怡的日常
 - 11.实现心怡的梦想
 
@@ -114,12 +115,17 @@
     - 那么心怡肯定会非常的感动的。如果说蜡烛随风摇摆不定，一闪一闪。此时再加上一瓶红酒，洒一些花瓣，花前烛下，浪漫至极。
 
 
+### 09.一些有趣的事情
+- 一份试卷考核
+    - 让心怡宝贝出一套自己的试卷，考核的点有：做饭，早餐安排，护肤，简单题说媳妇优点等等。让试卷充满趣味！
+
+
 ### 10.了解心怡的日常
 - 了解女朋友所有的尺码
     - 留意她衣服、裤子、鞋子、手指的尺码，方便平时送她衣服、鞋子、戒指之类的礼物。让她感觉惊喜和你的贴心。
 - 知道女朋友的生理期
     - 心怡宝贝生理期会出现生理疼痛，感觉心情烦躁。可以给她准备红糖水，留意她的心情。在心怡难受的时候给无微不至的照顾就是最好的惊喜。
-- 记住心怡的生日和你们的纪念日
+- 记住心怡的生日和特殊的纪念日
     - 大多数女生很在意形式感，在心怡的生日和你们的纪念日里精心准备一份礼物或是安排一场出游，不断的给她惊喜。
 
 
@@ -127,10 +133,6 @@
 ### 11.实现心怡的梦想
 
 
-
-
-
-https://www.hunliji.com/bai_ke/detail_57882
 
 
 
