--- a/Read/ReadMeWiki/09.问题面试/03.Android问题汇总.md
+++ b/Read/ReadMeWiki/09.问题面试/03.Android问题汇总.md
@@ -24,6 +24,7 @@
 #### 1.0 App启动
 - 说一下App进程启动的流程？在进程启动时启动了那些服务，做了什么事情？在启动服务是怎么创建Context上下文？
 - ActivityThread为何说是程序入口，Looper是如何启动的。系统是如何创建application应用，说一下大概流程？
+- Application中attachBaseContext方法，onCreate方法和ContentProvider中的onCreate方法执行的顺序是什么？
 
 
 
