--- a/Read/ReadMeWiki/06.Framework/03.App核心概念分析.md
+++ b/Read/ReadMeWiki/06.Framework/03.App核心概念分析.md
@@ -12,10 +12,10 @@
     - 4.1 启动流程图
     - 4.2 流程图说明
     - 4.3 Window如何创建
-- 06.DecorView说明
-    - 6.1 什么是DecorView
-    - 6.2 DecorView如何创建
-
+- 05.DecorView说明
+    - 5.1 什么是DecorView
+    - 5.2 DecorView如何创建
+- 06.Android组件设计
 
 
 
@@ -169,8 +169,8 @@
 
 
 
-### 06.DecorView说明
-#### 6.1 什么是DecorView
+### 05.DecorView说明
+#### 5.1 什么是DecorView
 - DecorView是FrameLayout的子类，它可以被认为是Android视图树的根节点视图。
     - DecorView作为顶级View，一般情况下它内部包含一个竖直方向的LinearLayout，**在这个LinearLayout里面有上下三个部分，上面是个ViewStub，延迟加载的视图（应该是设置ActionBar，根据Theme设置），中间的是标题栏(根据Theme设置，有的布局没有)，下面的是内容栏。** 具体情况和Android版本及主体有关，以其中一个布局为例，如下所示：
     ``` java
@@ -198,10 +198,65 @@
 
 
 
-#### 6.2 DecorView如何创建
+#### 5.2 DecorView如何创建
 - 从Activity中的setContentView()开始。
     - 在Activity中的attach()方法中，生成了PhoneWindow实例。既然有了Window对象，那么我们就可以**设置DecorView给Window对象了。
     - 从中获取mContentParent。获得到之后，然后通过installDecor方法，然后生成DecorView，不过这里操作很复杂，大概流程先从主题中获取样式，然后根据样式，加载对应的布局到DecorView中，为mContentParent添加View，即Activity中的布局。
+
+
+
+### 06.Android组件设计
+- 组件化设计实现
+    - 程序由组件组成；组件与进程剥离；组件皆程序入口
+- 程序由组件组成
+    - Activity：前台交互；Service：后台计算；Broadcast Receiver：广播通信；Content Provider：数据封装
+- 组件与进程剥离
+    - 组件关闭时，进程可以继续存在，提高重新启动时的速度；进程关闭时，组件可以继续存在，保护被杀进程里面的组件。
+- 将组件与进程进行剥离，使得进程对组件透明，听起来很好，但是如何解决以下四个问题？
+    - 谁来负责组件的启动和关闭？
+    - 谁来维护组件的状态？
+    - 谁来管理组件运行时所需要的进程？
+    - 组件之间如何进行通信？
+
+
+#### 6.1 ActivityManagerService
+- 启动组件
+    - 组件启动时，检查其所要运行在的进程是否已创建。如果已经创建，就直接通知它加载组件。否则，先将该进程创建起来，再通知它加载组件。
+- 关闭组件
+    - 组件关闭时，其所运行在的进程无需关闭，这样就可以让组件重新打开时得到快速启动。
+- 维护组件状态
+    - 维护组件在运行过程的状态，这样组件就可以在其所运行在的进程被回收的情况下仍然继续生存。
+- 进程管理
+    - 在适当的时候主动回收空进程和后台进程，以及通知进程自己进行内存回收
+    - 组件的UID和Process Name唯一决定了其所要运行在的进程。
+    - 每次组件onStop时，都会将自己的状态传递给AMS维护。
+    - AMS在以下四种情况下会调用trimApplications来主动回收进程：
+        - A.activityStopped
+        - B.setProcessLimit
+        - C.unregisterReceiver
+        - D.finishReceiver
+    - WMS也会主动回收进程：
+        - WindowManagerService在处理窗口的过程中发生Out Of Memroy时，会调用reclaimSomeSurfaceMemoryLocked来回收某些Surface占用的内存，reclaimSomeSurfaceMemoryLocked的逻辑如下所示：
+        - (1).首先检查有没有泄漏的Surface，即那些Session已经不存在但是还没有销毁的Surface，以及那些宿主Activity已经不可见但是还没有销毁的Surface。如果存在的话，就将它们销毁即可，不用KillPids。
+        - (2).如果不存在没有泄漏的Surface，那么那些存在Surface的进程都有可能被杀掉，这是通过KillPids来实现的。
+
+
+#### 6.2 Binder
+- 为组件间通信提供支持
+    - 进程间；进程内
+- 高效的IPC机制
+    - 进程间的组件通信时，通信数据只需一次拷贝
+    - 进程内的组件通信时，跳过IPC进行直接的通信
+- 传统的IPC，通信数据需要执行两次，一次是从源进程的用户空间拷贝到内核空间，二次是从内核空间拷贝到目标进程的用户空间
+
+
+
+
+
+
+
+
+
 
 
 
