--- a/Read/ReadMeWiki/06.Framework/11.四大组件原理分析.md
+++ b/Read/ReadMeWiki/06.Framework/11.四大组件原理分析.md
@@ -4,10 +4,9 @@
 - 02.Activity布局创建
 - 03.Activity布局渲染
 - 04.Activity知识合集
-- 05.startService启动流程
-- 06.bindService启动流程
-- 07.Service知识合集
-
+- 05.Service知识合集
+- 06.startService启动流程
+- 07.bindService启动流程
 
 
 ### 01.Activity启动流程
@@ -101,11 +100,15 @@
 
 
 
+### 04.Activity知识合集
+- Activity堆栈，由ActivityManagerService维护
+    - ![image](https://box.kancloud.cn/dc3e75f0c05c893cc641be28bed9926c_619x201.jpg)
 
 
 
-
-
+### 05.Service知识合集
+- service的生命周期图
+    - ![image](https://box.kancloud.cn/d9cc669283608a4df2c5b0bdc595c83c_406x512.jpg)
 
 
 
