--- a/Read/ReadMeWiki/00.方案实践/15.进程优化设计实践.md
+++ b/Read/ReadMeWiki/00.方案实践/15.进程优化设计实践.md
@@ -1,71 +1,67 @@
 #### 目录介绍
-- 概述
-    - 项目背景
-    - 设计目标
-- 方案设计
-    - 整体架构
-        - 架构设计图
-        - UML设计图
-    - 功能设计
-        - 关键流程图
-        - 接口设计图
-        - 模块间依赖关系
-- 其他设计（Optional）
-    - 性能设计
-    - 稳定性设计
-    - 灰度设计
-    - 降级设计
-    - 异常设计
-- 排期与计划
-    - 排期节点
-    - 落实反馈
+- 01.整体概述介绍
+    - 1.1 项目背景
+    - 1.2 遇到问题
+    - 1.3 基础概念
+    - 1.4 设计目标
+- 02.进程基础概念
+    - 2.1 进程间如何通信
+    - 2.2 内存紧张回收进程
+    - 2.3 如何查看进程信息
 
 
+### 01.整体概述介绍
+#### 1.1 项目背景
 
 
+#### 1.2 遇到问题
+- 进程被杀死的问题
+    - 系统为什么会杀掉进程，app切换到后台后为什么容易被杀死？
+    - 系统杀的为什么是我的进程，这是按照什么标准来选择的？
+    - 系统是一次性干掉多个进程，还是一个接着一个杀，为什么？
+- 进程包活的问题
+    - 保活套路一堆，方法有很多种，究竟如何进行进程保活才是比较恰当？
 
-- 01.App进程保活介绍
-- 02.常见的保活方法
-- 03.思考一些基础问题
-- 04.如何查看进程信息
-- 05.内存阀值理解和查看
-- 06.应用被杀死原因
-- 07.白名单进程基础了解
+
+#### 1.3 基础概念
+
+
+#### 1.4 设计目标
 
 
 
 
 
 
-### 01.App进程保活介绍
-- 1,除了微信这样的白名单大佬,没有app可以青春永驻
-- 2,保活只能是使用一些歪门邪道来延长进程的持续时间
-- 3,如果在原生的安卓系统去做,可能会好很多,但介于国内环境,只能尽力而为,有些机型可谓圣斗士一样
-- 4,网上保活方案众多,不可能全部用上,分析使用
-- 5,所谓保活是延长我们核心进程的寿命,比如推送,或者IM,推送其实各厂家做了很多的保活机制,多数为共享长链接,小米这种系统级别的不说,IM也一样,但我们其实也可以在他们的基础上想办法再做一层保活,像个推需要自己集成实现一个service.
+### 02.进程基础概念
+#### 2.1 进程间如何通信
 
 
 
-### 02.常见的保活方法
-- 1,经典的一像素保活,据说QQ是这门干的(据说),很流氓,很有效,就是在锁屏和解锁的时候创建一个一个像素的Activity,这样做的目的是提升进程的优先级,不过有部分手机好像把解锁屏幕的广播给拿掉了
-- 2,双进程守护,开俩个进程相互唤起,因为系统的进程回收机制是一个个回收的,利用这个时间差来相互唤起,当一个进程被磨灭掉,另一个马上重启,缺点是现在大部分机型只要一键清理就玩完了,不过也没有更好的办法,而且8.0之后对这个做了限制,想要在一个后再服务中启动另一个服务会报错,可以用startForegroundService方法,但是会有一个通知在通知栏,这就有点不太友好了,不过介于8.0以下手机还有很多,可以考虑
-- 3,native进程(已报废)
-- 4,JobIntentService,这个好多人不知道,其实就是之前JobService,利用系统的调度去开启一个服务,不过这个很简单,比JobService的使用简单多了,这个东西会在解锁屏幕,充电啊这一些动作的时候去重启执行里面的job,甚至手机重启,所以用它来总一些事情再核实不过了,不过它也是会被杀死的.
-- 5,利用账号同步机制拉活,不过貌似被改了,失效了
-- 6,在后台播放一个无声的音频,看起来很不错,不过总感觉该方案有点....
-- 7,将service设置为前台进程,通2方法一样,会强制有个通知,可以考虑用innerService发送俩个id一样的通知,然后结束掉一个(8.0之后无效),该方法很好
+
+#### 2.2 内存紧张回收进程
+- 低杀，它的全名是 Low Memory Killer。
+    - 低杀跟垃圾回收器 GC 很像，GC 的作用是保证应用有足够的内存可以使用，而低杀的作用是保证系统有足够的内存可以使用。
+    - GC 会按照引用的强度来回收对象，而低杀会按照进程的优先级来回收资源。
+- 内存紧张时回收进程
+    - 由于组件与进程是剥离的，因此进程回收不会影响组件的生命周期
+- 从低优先级进程开始回收
+    - Empty Process
+    - Hidden Process
+    - Perceptible Process
+    - Visible Process
+    - Foreground Process
+- 备注：
+    - 每一个APP进程都有一个oom_adj值，该值是根据进程所运行的组件计算出来的，值越小，优先级就越级。
+    - Init和System Server进程的oom_adj等于-16，是最高的，保证不会被杀死。
+    - PhoneApp具有persist属性，它的oom_adj被设置为-12，也能保证不会被杀死。
+    - 可以通过/proc/<pid>oom_adj文件查看进程的oom_adj值。
+    - 在Linux内核中，子进程的oom_adj值等于父进程的oom_adj，也就是说，Android里面的Native进程的oom_adj值与fork它的进程的oom_adj值一样。
 
 
 
-### 03.思考一些基础问题
-- 系统为什么会杀掉进程，app切换到后台后为什么容易被杀死？
-- 系统杀的为什么是我的进程，这是按照什么标准来选择的？
-- 系统是一次性干掉多个进程，还是一个接着一个杀，为什么？
-- 保活套路一堆，方法有很多种，究竟如何进行进程保活才是比较恰当？
 
-
-
-### 04.如何查看进程信息
+#### 2.3 如何查看进程信息
 - 如何查看所有的进程信息，直接在命令行输入指令即可，查看设备所有进程信息。
     - 第一步：adb shell；第二步：top
     - 下面这个就是当前所有进程信息，当把一鹿有车切换为前台进程时，所有进程信息如下所示：
@@ -102,6 +98,7 @@
     - 当app切换到前台时，可以发现该app进程优先级明显增高；
 
 
+
 ### 05.内存阀值理解和查看
 - 思考以下进程是怎么被杀的呢？
     - 系统出于体验和性能上的考虑，app在退到后台时系统并不会真正的kill掉这个进程，而是将其缓存起来。
@@ -136,7 +133,8 @@
     - SYSTEM_ADJ	-16	系统进程
     - NATIVE_ADJ	-17	系统起的Native进程
 - 根据oom_adj值对应用保活有啥意义？
-    - 根据上面的adj值，其实系统在进程回收跟内存回收类似也是有一套严格的策略，大概是这个样子的，oom_adj越大，占用物理内存越多会被最先kill掉，那么现在对于进程如何保活这个问题就转化成，如何降低oom_adj的值，以及如何使得我们应用占的内存最少。
+    - 根据上面的adj值，其实系统在进程回收跟内存回收类似也是有一套严格的策略，大概是这个样子的，oom_adj越大，占用物理内存越多会被最先kill掉。
+    - 那么现在对于进程如何保活这个问题就转化成，如何降低oom_adj的值，以及如何使得我们应用占的内存最少。
 
 
 
@@ -165,18 +163,6 @@
 
 
 
-
-- 01.什么叫做App低杀操作
-- 02.进程优先级的概念
-- 03.常见的进程有哪些
-
-
-
-
-### 01.什么叫做App低杀操作
-- 低杀，它的全名是 Low Memory Killer。
-    - 低杀跟垃圾回收器 GC 很像，GC 的作用是保证应用有足够的内存可以使用，而低杀的作用是保证系统有足够的内存可以使用。
-    - GC 会按照引用的强度来回收对象，而低杀会按照进程的优先级来回收资源。
 
 
 ### 02.进程优先级的概念
@@ -584,114 +570,6 @@
     - 此外，**< application >** 元素也支持 **android:process** 属性，以设置适用于所有组件的默认值
 - 如果内存不足而系统又需要内存时，系统可能会在某一时刻关闭某一进程
     - Android 系统将权衡所有进程对用户的相对重要程度来决定终止哪个进程，被终止的进程中运行的应用组件也会随之销毁， 当这些组件需要再次运行时，系统将为它们重启进程
-
-
-
-### 01.概述
-#### 1.1 项目背景
-- 通过简要的语言描述项目背景以及要达成的业务目标。
-
-#### 1.2 设计目标
-- 需求的背后往往会带来技术的重构/优化，或者单纯的完成需求，如果有必要，需要从技术角度给出方案设计的目标
-- 比如对于图片下载需求，需要完成相关的功能，那么设计目标主要有完成异步下载、存储、缓存设计、图片解码、渲染等功能。
-- 比如对于优化需求，目标可以是达到一个什么效果？可以是帧率的、Crash率的、卡顿的等。
-- 比如对于重构需求，目标可以是加强扩展、解决问题、提升效率等。
-
-
-
-### 02.方案设计
-- 方案设计是技术文档的最核心部分，主要包括了整体架构和功能设计，这里需要体现：
-- 设计的初衷：概要描述方案设计的思考，可以是为了扩展性的考虑，可以是提升性能
-关键技术点的思考：描述关键技术选型的思考，比如要解耦，业内解耦方案能有router、Target-Action等，讲清楚选择的思考
-- 技术上的折中/取舍：在做技术设计的时候，往往要的很多，但时间有限，那么这个需要讲一下折中与取舍，以及接下来的规划、计划
-
-
-
-#### 2.1 整体架构
-- 整体架构的组成需要有一张完成的架构设计图，描述清楚具体的分层以及层与层之间的关系
-- 比如传统的开发会分为三层，展示层、逻辑层、数据层
-    - 展示层的设计：视图的构成、视图间的耦合关系、具体的交互逻辑
-    - 逻辑层的设计：支撑展示层所需要的数据、从数据层获取数据的加工、业务相关逻辑（比如轮询服务）
-    - 数据层的设计：数据的获取方式以及存储方式，文件、数据库、本地、网络
-
-
-
-#### 2.2 功能设计
-- 功能设计包含但不限于以下几个部分：逻辑流程图、接口设计图、与外部的模块间依赖关系
-
-#### 2.2.1 关键流程图
-- 设计中的最复杂、最关键的逻辑需要画出流程图，实在画不出的流程图需要用语言描述清楚。
-- 关键流程需要有逻辑流程图，帮助其他同学理解功能的关键节点逻辑
-
-
-##### 2.2.2 接口设计图
-- 通过UML类图来展示类间关系，描述清楚接口设计的一些思考原则
-    - 提供的接口，往往接口设计为了完成相关逻辑
-
-
-
-##### 2.2.3 模块间依赖关系
-- 描述清楚和哪些模块存在依赖关系以及原因，比如首页依赖于购物车模块，需要解释清楚要强耦合，有没有办法解耦
-    - App内部模块间依赖
-    - App外部依赖
-
-
-#### 2.3 UI/动效设计
-- 客户端开发有很大一部分精力在UI/动效上，对于复杂的静态UI和复杂动效，需要给出实现方案和选型逻辑
-- 静态UI
-    - 只有复杂的UI才需要给出设计方案，例如核心页面大重构、复杂的协调布局等
-- 复杂动效
-    - 复杂的动效是端上容易踩坑的关键点，需要给出实现方案的对比、选型等，为验证动效可行性，可以给出动效Demo
-
-
-
-### 03.其他设计（Optional）
-- 以下部分是可选项，主要是从异常、兼容性、性能、稳定性、灰度、降级等维护来设计。
-
-
-#### 3.1 性能设计
-- 有些业务项目可能会考虑性能，比如列表页，卡顿、流畅度怎么样？如何评估？
-- 有些技术项目可能也会考虑性能，比如数据库设计，检索性能如何？是否有瓶颈，如何评估？
-
-
-#### 3.2 稳定性设计
-- 大的项目需要考虑性能如何保障？
-    - 比如方案 Review
-    - 比如自测Case Review，加强自测
-    - 比如单测
-
-
-#### 3.3 灰度设计
-- 核心关键功能需要有A/B设计
-- 比如UIWebview替换为WKWebview，其中存在很多不确定因素，需要做好灰度设计
-
-
-#### 3.4 降级设计
-- 在做一些新技术尝试时，需要考虑降级设计
-    - 比如RN、swift、weex引入对原有业务造成影响的，需要有兜底，可降级
-    - 参考资料
-    - 需要列出方案设计过程的文档，包括但不局限于PM需求文档，技术参考文档等。
-
-
-#### 3.5 异常设计
-- 大部分业务需求都会涉及到异常处理，在关心主流程的同时需要关注异常场景怎么保证正确性？
-    - 比如用户操作中途退出、网络异常、数据被清理等
-
-
-#### 3.6 兼容性设计
-- 业务逻辑一般不会涉及到兼容性，但UI/动效需求容易遇到兼容性问题，也是提测时需要让QA关注的
-    - 比如独立端/嵌入端、高低版本API适配等
-
-
-### 04.排期与计划
-- 排期计划主要针对周期较长项目的时间补充，对于小型项目不需要，例如：
-    - 正常的版本业务需求，5pd以下，不需要给出排期计划；5pd或者以上，可以简单描述一下排期和提测时间
-    - 跨版本的大型业务需求、重构专项等，需要给出详细的排期计划
-    - 研发自驱的技术优化项目，需要给出详细的排期计划
-
-
-### 05.参考资料
-- 需要列出方案设计过程的文档，包括但不局限于PM需求文档，技术参考文档等。
 
 
 ### 参考
