--- a/Read/ReadMeWiki/06.Framework/01.Android系统的框架.md
+++ b/Read/ReadMeWiki/06.Framework/01.Android系统的框架.md
@@ -3,7 +3,8 @@
 - 01.系统框架整体介绍
 - 02.Android专用驱动
 - 03.HAL硬件抽象层
-- 
+- 04.Android应用框架
+- 05.Android界面架构
 
 
 ### 01.系统框架整体介绍
@@ -39,9 +40,25 @@
 
 
 
+### 04.Android应用框架
+- Android应用程序框架
+    - 管理硬件
+    - 提供服务
+    - 组件管理
+    - 进程管理
 
 
 
+### 05.Android界面架构
+- 窗口管理框架
+    - Window
+    - WindowManagerService
+    - SurfaceFlinger
+    - ![image](https://box.kancloud.cn/8bc177c30dbdbd85c96adf9cba796e90_698x608.png)
+- 资源管理框架
+    - AssetManager
+    - Resources
+    - ![image](https://box.kancloud.cn/52ade3f62b423568fa389cae5fdf64f5_580x559.jpg)
 
 
 
