--- a/Read/ReadMeWiki/06.Framework/03.App核心概念分析.md
+++ b/Read/ReadMeWiki/06.Framework/03.App核心概念分析.md
@@ -231,10 +231,10 @@
     - 组件的UID和Process Name唯一决定了其所要运行在的进程。
     - 每次组件onStop时，都会将自己的状态传递给AMS维护。
     - AMS在以下四种情况下会调用trimApplications来主动回收进程：
-        - A.activityStopped
-        - B.setProcessLimit
-        - C.unregisterReceiver
-        - D.finishReceiver
+        - A.activityStopped，停止Activity
+        - B.setProcessLimit，设置进程数量限制
+        - C.unregisterReceiver，注销Broadcast Receiver
+        - D.finishReceiver，结束Broadcast Receiver
     - WMS也会主动回收进程：
         - WindowManagerService在处理窗口的过程中发生Out Of Memroy时，会调用reclaimSomeSurfaceMemoryLocked来回收某些Surface占用的内存，reclaimSomeSurfaceMemoryLocked的逻辑如下所示：
         - (1).首先检查有没有泄漏的Surface，即那些Session已经不存在但是还没有销毁的Surface，以及那些宿主Activity已经不可见但是还没有销毁的Surface。如果存在的话，就将它们销毁即可，不用KillPids。
