--- a/Read/ReadMeWiki/06.Framework/12.四大组件原理分析.md
+++ b/Read/ReadMeWiki/06.Framework/12.四大组件原理分析.md
@@ -10,6 +10,11 @@
 
 
 ### 01.Broadcast知识合集
+- 注册广播
+    - ![image](https://box.kancloud.cn/e3ca3b92735f0d6505aec285aee1f98b_651x268.png)
+- 发送广播
+    - ![image](https://box.kancloud.cn/a02a367c95193289e3262e37ffcc7ded_986x335.png)
+
 
 
 
