--- a/Read/ReadMeWiki/00.方案实践/11.OOM异常优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/11.OOM异常优化实践.md
@@ -1,5 +1,6 @@
 #### 目录介绍
 - 01.常见OOM分类说明
+    - 1.1 OOM简单分类
 - 02.堆内存治理思路
 - 03.使用那些分析工具
 - 04.常见OOM出现场景
@@ -14,6 +15,7 @@
 
 
 ### 01.常见OOM分类说明
+#### 1.1 OOM简单分类
 - 主要分为下面几类：
     - Java堆内存超限
         - 堆内存单次分配过大
