--- a/Read/ReadMeWiki/09.问题面试/07.设计模式问题汇总.md
+++ b/Read/ReadMeWiki/09.问题面试/07.设计模式问题汇总.md
@@ -8,7 +8,7 @@
 - 07.工厂模式问题
 - 08.建造者模式问题
 - 09.观察者模式问题
-- 10.
+- 10.策略者模式问题
 
 
 
@@ -67,7 +67,9 @@
 - ListView的BaseAdapter中有DataSetObservable，在设置适配器的时候会创建观察者并注册，调用notifyDataSetChange时会通知观察者，观察者会requestLayout。
 
 
-
+### 10.策略者模式问题
+- 阐述一下使用策略者模式的应用场景？
+- 如何针对冗长的 if-else 或 switch 分支进行架构层面优化，增强框架拓展？
 
 
 
