--- a/Read/ReadShareWiki/00.心怡宝贝/01.如何去制造惊喜.md
+++ b/Read/ReadShareWiki/00.心怡宝贝/01.如何去制造惊喜.md
@@ -33,7 +33,7 @@
     - 想要让礼物更特别或者说更实用一些，可以给女朋友送一束“特别的花”，例如草莓花束，现在也比较流行。
 - 展露厨艺
     - 为她做一顿家常饭，一样可以充满浪漫的情调，特别是她经常做饭的情况。如果你对自己的烹饪能力充满信心，请尝试让您的女朋友享用美食。
-    - 你可以做早餐，午餐或晚餐都可以。这顿饭不需要任何花哨的东西，但要确保这是她喜欢的饭菜和口味。
+    - 可以做早餐，午餐或晚餐都可以。这顿饭不需要任何花哨的东西，但要确保这是她喜欢的饭菜和口味。
     - 清洁桌子，使用匹配的餐具，点燃蜡烛。这将表明您不仅仅是在享用夜间美食，而且这是一顿特别的晚餐。
 - 接她下班
     - 如果彼此上班的地方不一样，偶尔可以在她学校的楼下等她下班，事先不告诉她。可以带些小礼物、一朵花等等。
