--- a/Read/ReadMeWiki/06.Framework/11.四大组件原理分析.md
+++ b/Read/ReadMeWiki/06.Framework/11.四大组件原理分析.md
@@ -105,6 +105,20 @@
     - ![image](https://box.kancloud.cn/dc3e75f0c05c893cc641be28bed9926c_619x201.jpg)
 
 
+#### 4.1 Activity栈管理
+- 栈管理的简单介绍
+    - 一个应用程序通常包含多个Activity。每个Activity在设计时都应该以执行某个用户发起的 action 作为核心目标，并且它能启动其它Activity。 
+    - Task就是多个Activity的集合，用户操作时与Activity进行交互。这些Activity根据启动顺序压入task中，如果pop task 是按照先进后出的顺序pop。
+- Task任务栈的管理
+    - Activity依照顺序压入Task并按照“先进后出”的顺序pop，对Task的管理显得十分的必要。
+    - taskAffinity属性：如果不设置此属性，默认一个应用程序只有一个栈，这个栈以应用包命为单位。task对于Activity来说就好像它的身份证一样，可以告诉所在的task，自己属于这个task中的一员；拥有相同affinity的多个Activity理论同属于一个task，task自身的affinity决定于根Activity的affinity值。
+    - affinity在什么场合应用呢？1.根据affinity重新为Activity选择宿主task；2.启动一个Activity过程中Intent使用了FLAG_ACTIVITY_NEW_TASK标记，根据affinity查找或创建一个新的具有对应affinity的task
+- ActivityTask和Activity栈管理
+    - http://www.lxiaoyu.com/p/324616
+    - https://blog.csdn.net/heng615975867/article/details/108725469
+
+
+
 
 ### 05.Service知识合集
 - service的生命周期图
