--- a/Read/ReadMeWiki/00.方案实践/04.ANR监控设计实践.md
+++ b/Read/ReadMeWiki/00.方案实践/04.ANR监控设计实践.md
@@ -65,6 +65,7 @@
     - Android系统对于一些事件需要在一定的时间范围内完成，如果超过预定时间能未能得到有效响应或者响应时间过长，都会造成ANR。
 
 
+
 #### 2.2 造成ANR的原因分类
 - 造成ANR的原因一般有两种：
     - 当前的事件没有机会得到处理（即主线程正在处理前一个事件，没有及时的完成或者looper被某种原因阻塞住了）
@@ -527,6 +528,6 @@
     - https://juejin.cn/post/6942665216781975582
 - 今日头条 ANR 优化实践系列
     - https://mp.weixin.qq.com/s/_Z6GdGRVWq-_JXf5Fs6fsw
-- ANR监控
-    - https://juejin.cn/post/7181731795439157306
+- Android SIGQUIT(3) 信号拦截与处理
+    - https://mp.weixin.qq.com/s?__biz=Mzg4MjE5OTI4Mw==&mid=2247494779&idx=1&sn=b8c84e8e8389543cfbda93cbadd1593c&chksm=cf58f3e7f82f7af1ffff70e1c9f2d6a6a0d0a4b5e4f3f3dd42e9d79fd950bfa32913942ec6d3&scene=178&cur_album_id=2495132597375975425#rd
 
