--- a/Read/ReadMeWiki/00.方案实践/05.ANR治理优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/05.ANR治理优化实践.md
@@ -6,38 +6,8 @@
     - 1.4 设计目标
     - 1.5 产生收益分析
 - 02.ANR基础分析
-    - 2.1 究竟什么是ANR
-    - 2.2 造成ANR的原因分类
-    - 2.3 ANR产生条件
-    - 2.4 ANR触发场景
-    - 2.5 四大组件ANR
-    - 2.6 触发ANR的步骤
-- 03.ANR流程分析
-    - 3.1 触发ANR的步骤
-    - 3.2 Activity的ANR分析
-    - 3.3 Service的ANR分析
-    - 3.4 ANR后系统执行流程
-    - 3.5 那些极端情况不会ANR
-    - 3.6 ANR静默和弹窗
-    - 3.7 处理ANR信息收集
-- 04.ANR是怎么设计
-    - 4.1 什么是输入系统
-    - 4.2 系统进程输入系统
-    - 4.3 组件类型ANR
-    - 4.4 Input类型ANR
-    - 4.5 事件分发异步机制
-- 05.ANR监控排查思路
-    - 5.1 ANR监控整体思路
-    - 5.2 目前流行方案
-    - 5.3 ANR捕获设计
-- 06.其他设计说明
-    - 6.1 性能设计
-    - 6.2 稳定性设计
-    - 6.3 灰度设计
-    - 6.4 降级设计
-    - 6.5 异常设计
-- 07.其他说明介绍
-    - 7.1 参考链接
+    - 2.1 如何查看ANR日志
+
 
 
 
@@ -59,474 +29,24 @@
 
 
 ### 02.ANR基础分析
-#### 2.1 究竟什么是ANR
-- ANR的简单理解
-    - ANR Activity not responding(页面没有响应) ；ANR Application not responding 应用没有响应
-    - Android系统对于一些事件需要在一定的时间范围内完成，如果超过预定时间能未能得到有效响应或者响应时间过长，都会造成ANR。
-
-
-#### 2.2 造成ANR的原因分类
-- 造成ANR的原因一般有两种：
-    - 当前的事件没有机会得到处理（即主线程正在处理前一个事件，没有及时的完成或者looper被某种原因阻塞住了）
-    - 当前的事件正在处理，但没有及时完成
-
-
-#### 2.3 ANR产生条件
-- ANR的产生需要满足三个条件
-    - 主线程：只有应用程序进程的主线程响应超时才会产生ANR；
-    - 超时时间：产生ANR的上下文不同，超时时间也会不同，但只要在这个时间上限内没有响应就会ANR；
-    - 输入事件/特定操作：输入事件是指按键、触屏等设备输入事件，特定操作是指BroadcastReceiver和Service的生命周期中的各个函数，产生ANR的上下文不同，导致ANR的原因也会不同；
-
-
-#### 2.4 ANR触发场景
-- 分别有哪些场景
-    - 主线程，被阻塞5秒钟以上，就会抛出ANR对话框。不同的组件发生ANR的时间不一样，Activity是5秒，BroadCastReceiver是10秒，Service是20秒（均为前台）。
-    - 点击事件(按键和触摸事件)5s内没被处理: Input event dispatching timed out
-- 那些操作会引发ANR
-    - 1.Activity，Fragment中暴力相应点击事件有可能会导致ANR；2.断点调试时，程序可能会出现ANR无限应；3.主线程做了耗时操作，比如查询数据库数据导致ANR
-
-
-#### 2.5 四大组件ANR
-- service 前台20s后台200s未完成启动： Timeout executing service
-    - Service Timeout是位于”ActivityManager”线程中的AMS.MainHandler收到SERVICE_TIMEOUT_MSG消息时触发。
-    - 对于Service有两类: 对于前台服务，则超时为SERVICE_TIMEOUT = 20s；对于后台服务，则超时为SERVICE_BACKGROUND_TIMEOUT = 200s
-- BroadcastReceiver的事件(onReceive方法)在规定时间内没处理完：Timeout of broadcast BroadcastRecord
-    - 对于前台广播，则超时为BROADCAST_FG_TIMEOUT = 10s；对于后台广播，则超时为BROADCAST_BG_TIMEOUT = 60s
-    - 以BroadcastReviver为例，在onReceive()方法执行10秒内没发生第一种ANR(也就是在这个过程中没有输入事件或输入事件还没到5s)才会发生Receiver timeout，否则将先发生事件无相应ANR，所以onReceive()是有可能执行不到10s就发生ANR的，所以不要在onReceive()方法里面干活
-- ContentProvider的publish在10s内没进行完：timeout publishing content providers
-- Activity 界面如果5秒未响应：Activity not responding。这种是特别常见的场景
-
-
-### 03.ANR流程分析
-#### 3.1 触发ANR的步骤
-- 四大组件触发ANR的步骤。大概是：埋下注册超时 ----> 触发超时 ----> 引发超时ANR
+#### 2.1 如何查看ANR日志
 
 
 
-#### 3.3 Service的ANR分析
-##### 3.3.1 埋下注册超时
-- 调用startService，在Service进程attach到system_server进程的过程中会调用realStartServiceLocked()方法来注册超时
-- 具体看ActiveServices类中的realStartServiceLocked()方法源码
-    ``` java
-    private final void realStartServiceLocked(ServiceRecord r, ProcessRecord app, boolean execInFg) throws RemoteException {
-        ...
-        //发送delay消息
-        bumpServiceExecutingLocked(r, execInFg, "create");
-        try {
-            ...
-            //最终执行服务的onCreate()方法
-            app.thread.scheduleCreateService(r, r.serviceInfo,
-                    mAm.compatibilityInfoForPackageLocked(r.serviceInfo.applicationInfo),
-                    app.repProcState);
-        } catch (DeadObjectException e) {
-            mAm.appDiedLocked(app);
-            throw e;
-        } finally {
-        }
-    }
-    ```
-    - 接着往下看 bumpServiceExecutingLocked 方法源码，如下所示：
-    ``` java
-    private final void bumpServiceExecutingLocked(ServiceRecord r, boolean fg, String why) {
-        if (r.executeNesting == 0) {
-            if (r.app != null) {
-                if (timeoutNeeded && r.app.executingServices.size() == 1) {
-                    scheduleServiceTimeoutLocked(r.app);
-                }
-            }
-        } else if (r.app != null && fg && !r.app.execServicesFg) {
-            if (timeoutNeeded) {
-                scheduleServiceTimeoutLocked(r.app);
-            }
-        }
-    }
-    ```
-    - 接着看 scheduleServiceTimeoutLocked 方法源码，这里面才是处理超时时间的具体逻辑，通过handler发送延迟消息。
-    ``` java
-    void scheduleServiceTimeoutLocked(ProcessRecord proc) {
-        Message msg = mAm.mHandler.obtainMessage(
-                ActivityManagerService.SERVICE_TIMEOUT_MSG);
-        msg.obj = proc;
-        mAm.mHandler.sendMessageDelayed(msg,
-                proc.execServicesFg ? SERVICE_TIMEOUT : SERVICE_BACKGROUND_TIMEOUT);
-    }
-    ```
-- 然后来梳理一下整个流程
-    - ----> ActiveServices 类 realStartServiceLocked 方法
-    - ----> ActiveServices 类 bumpServiceExecutingLocked 方法
-    - ----> ActiveServices 类 scheduleServiceTimeoutLocked 方法 ， handler发送延迟消息
-
-
-##### 3.3.2 触发超时
-- 触发超时分析
-    - 在system_server进程AS.realStartServiceLocked()调用的过程会埋下注册超时, 超时没有启动完成则会超时。
-    - 那么什么时候会触发超时的引线呢? 经过Binder等层层调用进入目标进程的主线程handleCreateService()的过程。
-- 具体看ActivityThread类中的handleCreateService方法
-    ``` java
-    private void handleCreateService(CreateServiceData data) {
-        try {
-            //创建ContextImpl对象，直接new创建的
-            ContextImpl context = ContextImpl.createAppContext(this, packageInfo);
-            context.setOuterContext(service);
-            //创建Application对象，反射创建的
-            Application app = packageInfo.makeApplication(false, mInstrumentation);
-            service.attach(context, this, data.info.name, data.token, app,
-                    ActivityManagerNative.getDefault());
-            //调用服务onCreate()方法 
-            service.onCreate();
-            //触发超时的核心代码
-            ActivityManager.getService().serviceDoneExecuting(
-                    data.token, SERVICE_DONE_EXECUTING_ANON, 0, 0);
-        } catch (Exception e) {
-        }
-    }
-    ```
-    - 然后看一下ActivityManagerService类中的serviceDoneExecuting源码
-    ``` java
-    public void serviceDoneExecuting(IBinder token, int type, int startId, int res) {
-        synchronized(this) {
-            if (!(token instanceof ServiceRecord)) {
-                Slog.e(TAG, "serviceDoneExecuting: Invalid service token=" + token);
-                throw new IllegalArgumentException("Invalid service token");
-            }
-            mServices.serviceDoneExecutingLocked((ServiceRecord)token, type, startId, res);
-        }
-    }
-    ```
-    - 然后再看一下ActiveServices类中的serviceDoneExecutingLocked方法源码。该方法的主要工作是当service启动完成，则移除服务超时消息SERVICE_TIMEOUT_MSG。
-    ``` java
-    private void serviceDoneExecutingLocked(ServiceRecord r, boolean inDestroying, boolean finishing) {
-        if (r.executeNesting <= 0) {
-            if (r.app != null) {
-                r.app.execServicesFg = false;
-                r.app.executingServices.remove(r);
-                if (r.app.executingServices.size() == 0) {
-                    //当前服务所在进程中没有正在执行的service
-                    mAm.mHandler.removeMessages(ActivityManagerService.SERVICE_TIMEOUT_MSG, r.app);
-        }
-    }
-    ```
-- 然后来梳理一下整个流程
-    - ----> ActivityThread 类 handleCreateService 方法 
-    - ----> ActivityManagerService 类 serviceDoneExecuting 方法
-    - ----> ActiveServices 类 serviceDoneExecutingLocked 方法 
 
 
 
-##### 3.3.3 引发超时ANR
-- 如何引发超时ANR
-    - 介绍了埋下注册超时和触发超时的过程, 如果在超时倒计时结束之前成功拆卸注册超时,那么就没有引发ANR的机会。
-    - 但总有些极端情况下无法即时拆除注册超时,导致触发超时了, 其结果就是App发生ANR。
-- 在system_server进程中有一个Handler线程, 名叫”ActivityManager”
-    - 当倒计时结束便会向该Handler线程发送 一条信息SERVICE_TIMEOUT_MSG
-- 在ActivityManagerService类中的handleMessage方法中
-    ``` java
-    final class MainHandler extends Handler {
-        public void handleMessage(Message msg) {
-            switch (msg.what) {
-                case SERVICE_TIMEOUT_MSG: {
-                    mServices.serviceTimeout((ProcessRecord)msg.obj);
-                } break;
-            }
-        }
-    }
-    ```
-    - 然后看一下ActiveServices类的serviceTimeout方法
-    ``` java
-    void serviceTimeout(ProcessRecord proc) {
-        if (anrMessage != null) {
-            //当存在timeout的service，则执行ANR
-            mAm.appNotResponding(proc, null, null, false, anrMessage);
-        }
-    }
-    ```
-- 然后来梳理一下整个流程
-    - ----> ActivityManagerService 类 handleMessage 方法 
-    - ----> ActiveServices 类 serviceTimeout 方法
 
 
 
-#### 3.4 ANR后系统执行流程
-- ANR后流程如下
-    - APP发生ANR
-    - 进程接收异常终止信号，开始写入进程ANR信息（当时场景，包含当前线程所有堆栈信息、CPU/IO的使用情况等）；
-    - 弹出ANR提示框，提示用户关闭APP或者继续等待；（不同ROM表现不同，有的手机厂商会去掉这个提示框）
-- appNotResponding介绍
-    - 无论ANR的来源是哪里，最终都会走到ProcessRecord中的appNotResponding，这个方法包括了ANR的主要流程。
 
 
 
-#### 3.5 那些极端情况不会ANR
-- 具体可以看appNotResponding方法中的下面代码。会发现有一些条件直接执行了return。
-    ``` java
-    void appNotResponding(String activityShortComponentName, ApplicationInfo aInfo,
-            String parentShortComponentName, WindowProcessController parentProcess,
-            boolean aboveSystem, String annotation) {
-        synchronized (mService) {
-            // PowerManager.reboot() can block for a long time, so ignore ANRs while shutting down.
-            if (mService.mAtmInternal.isShuttingDown()) {
-                Slog.i(TAG, "During shutdown skipping ANR: " + this + " " + annotation);
-                return;
-            } else if (isNotResponding()) {
-                Slog.i(TAG, "Skipping duplicate ANR: " + this + " " + annotation);
-                return;
-            } else if (isCrashing()) {
-                Slog.i(TAG, "Crashing app skipping ANR: " + this + " " + annotation);
-                return;
-            } else if (killedByAm) {
-                Slog.i(TAG, "App already killed by AM skipping ANR: " + this + " " + annotation);
-                return;
-            } else if (killed) {
-                Slog.i(TAG, "Skipping died app ANR: " + this + " " + annotation);
-                return;
-            }
-        }
-    }
-    ```
-- 有哪些极端的情况不会ANR
-    - 一长串if else，给出了几种比较极端的情况，会直接return，而不会产生一个ANR。
-    - 这些情况包括：进程正在处于正在关闭的状态，正在crash的状态，被kill的状态，或者相同进程已经处在ANR的流程中。
-
-
-#### 3.6 ANR静默和弹窗
-- 看下面的源码分析，还是appNotResponding方法。
-    - 大概的意思是，通过isSilentAnr()判断是否是静默ANR，如果是那么则直接kill杀死app。其实就是后台ANR。
-    - 如果是前台，则是通过handler发送一个消息，创建anr弹窗对象，赋值给message的obj对象。
-    ``` java
-    void appNotResponding(String activityShortComponentName, ApplicationInfo aInfo,
-            String parentShortComponentName, WindowProcessController parentProcess,
-            boolean aboveSystem, String annotation) {
-        synchronized (mService) {
-            if (isSilentAnr() && !isDebugging()) {
-                kill("bg anr", true);
-                return;
-            }
-            makeAppNotRespondingLocked(activityShortComponentName,
-                    annotation != null ? "ANR " + annotation : "ANR", info.toString());
-            if (mService.mUiHandler != null) {
-                Message msg = Message.obtain();
-                msg.what = ActivityManagerService.SHOW_NOT_RESPONDING_UI_MSG;
-                msg.obj = new AppNotRespondingDialog.Data(this, aInfo, aboveSystem);
-                mService.mUiHandler.sendMessage(msg);
-            }
-        }
-    }
-    ```
-- 那么究竟是怎么判断是后台服务呢？
-    - 除非另有配置，否则在后台进程中吞下anr并杀死进程。非私有访问仅用于测试。
-    ``` java
-    boolean isSilentAnr() {
-        return !getShowBackground() && !isInterestingForBackgroundTraces();
-    }
-    ```
-- 再来看看处理弹窗展示的逻辑，具体看ActivityManagerService类的handleMessage方法。what是：SHOW_NOT_RESPONDING_UI_MSG
-    ``` java
-    final class UiHandler extends Handler {
-        @Override
-        public void handleMessage(Message msg) {
-            switch (msg.what) {
-            case SHOW_NOT_RESPONDING_UI_MSG: {
-                mAppErrors.handleShowAnrUi(msg);
-                ensureBootCompleted();
-            } 
-        }
-    }
-    ```
-
-
-#### 3.7 处理ANR信息收集
-- 为了方便定位，因此需要收集ANR信息。下面代码还是appNotResponding方法，主要是收集信息的重要代码。
-    - dump很多信息到ANR Trace文件里，下面的逻辑就是选择需要dump的进程。
-    - ANR Trace文件是包含许多进程的Trace信息的，因为产生ANR的原因有可能是其他的进程抢占了太多资源
-    ```
-    void appNotResponding(String activityShortComponentName, ApplicationInfo aInfo,
-            String parentShortComponentName, WindowProcessController parentProcess,
-            boolean aboveSystem, String annotation) {
-            firstPids.add(pid);
-    
-            // Don't dump other PIDs if it's a background ANR
-            if (!isSilentAnr()) {
-                int parentPid = pid;
-                if (parentProcess != null && parentProcess.getPid() > 0) {
-                    parentPid = parentProcess.getPid();
-                }
-                if (parentPid != pid) firstPids.add(parentPid);
-    
-                if (MY_PID != pid && MY_PID != parentPid) firstPids.add(MY_PID);
-    
-                for (int i = getLruProcessList().size() - 1; i >= 0; i--) {
-                    ProcessRecord r = getLruProcessList().get(i);
-                    if (r != null && r.thread != null) {
-                        int myPid = r.pid;
-                        if (myPid > 0 && myPid != pid && myPid != parentPid && myPid != MY_PID) {
-                            if (r.isPersistent()) {
-                                firstPids.add(myPid);
-                                if (DEBUG_ANR) Slog.i(TAG, "Adding persistent proc: " + r);
-                            } else if (r.treatLikeActivity) {
-                                firstPids.add(myPid);
-                                if (DEBUG_ANR) Slog.i(TAG, "Adding likely IME: " + r);
-                            } else {
-                                lastPids.put(myPid, Boolean.TRUE);
-                                if (DEBUG_ANR) Slog.i(TAG, "Adding ANR proc: " + r);
-                            }
-                        }
-                    }
-                }
-            }
-        }
-    
-        // don't dump native PIDs for background ANRs unless it is the process of interest
-        String[] nativeProcs = null;
-        if (isSilentAnr()) {
-            for (int i = 0; i < NATIVE_STACKS_OF_INTEREST.length; i++) {
-                if (NATIVE_STACKS_OF_INTEREST[i].equals(processName)) {
-                    nativeProcs = new String[] { processName };
-                    break;
-                }
-            }
-        } else {
-            nativeProcs = NATIVE_STACKS_OF_INTEREST;
-        }
-    
-        int[] pids = nativeProcs == null ? null : Process.getPidsForCommands(nativeProcs);
-        ArrayList<Integer> nativePids = null;
-    
-        if (pids != null) {
-            nativePids = new ArrayList<>(pids.length);
-            for (int i : pids) {
-                nativePids.add(i);
-            }
-        }
-    }
-    ```
-- 选择需要dump的进程的逻辑需要大概说下
-    - 需要被dump的进程被分为了firstPids、nativePids以及extraPids三类。
-    - 拿到需要dump的所有进程的pid后，AMS开始按照firstPids、nativePids、extraPids的顺序dump这些进程的堆栈
-    ``` java
-    File tracesFile = ActivityManagerService.dumpStackTraces(firstPids,
-            (isSilentAnr()) ? null : processCpuTracker, (isSilentAnr()) ? null : lastPids,
-            nativePids);
-    ```
 
 
 
-### 04.ANR是怎么设计
-#### 4.1 什么是输入系统
-- `ANR`机制到底是什么，其背后的原理究竟如何，为什么要设计出这样的机制？这些问题时时刻刻会萦绕脑海，而想搞清楚这些，就不得不提到`Android`自身的 **输入系统** （`Input System`）。
-`Android`自身的 **输入系统** 是什么？任何与`Android`设备的交互——称之为 **输入事件**，都需要通过 **输入系统** 进行管理和分发；这其中最靠近上层，并且最典型的一个小环节就是`View`的 **事件分发** 流程。
 
 
-#### 4.2 系统进程输入系统
-- `Android`系统在启动的时候,会初始化`zygote`进程和由`zygote`进程`fork`出来的`SystemServer`进程；作为 **系统进程** 之一，`SystemServer`进程会提供一系列的系统服务，而`InputManagerService`也正是由 `SystemServer` 提供的。
-- 在`SystemServer`的初始化过程中，`InputManagerService`(下称`IMS`)和`WindowManagerService`(下称`WMS`)被创建出来；其中`WMS`本身的创建依赖`IMS`对象的注入：
-    ``` java
-    // SystemServer.java
-    private void startOtherServices() {
-     InputManagerService inputManager = new InputManagerService(context);
-     // inputManager作为WindowManagerService的构造参数
-     WindowManagerService wm = WindowManagerService.main(context,inputManager, ...);
-    }
-    ```
-- 在 **输入系统** 中，`WMS`非常重要，其负责管理`IMS`、`Window`与`ActivityManager`之间的通信，先来看`IMS`。
-- `IMS`服务的作用就是负责输入模块在`Java`层级的初始化，并通过`JNI`调用，在`Native`层进行更下层输入子系统相关功能的创建和预处理。
-- 在`JNI`的调用过程中，`IMS`创建了`NativeInputManager`实例，`NativeInputManager`则在初始化流程中又创建了`EventHub`和`InputManager`:
-    ``` cpp
-    NativeInputManager::NativeInputManager(jobject contextObj, jobject serviceObj, const sp<Looper>& looper) : mLooper(looper), mInteractive(true) {
-        // ...
-        // 创建一个EventHub对象
-    sp<EventHub> eventHub = new EventHub();
-    // 创建一个InputManager对象
-    mInputManager = new InputManager(eventHub, this, this);
-    }
-    ```
-- 对于整个`Native`层级而言，其向下负责与`Linux`的设备节点中获取输入，向上则与靠近用户的`Java`层级相通信，可以说是非常重要。而在该层级中，`EventHub`和`InputManager`又是最核心的两个角色。
-- 首先来说`EventHub`，它是底层 **输入子系统** 中的核心类，负责从物理输入设备中不断读取事件（`Event`)，然后交给`InputManager`，后者内部封装了`InputReader`和`InputDispatcher`，用来从`EventHub`中读取事件和分发事件
-    ``` cpp
-    InputManager::InputManager(...) {
-        mDispatcher = new InputDispatcher(dispatcherPolicy);
-        mReader = new InputReader(eventHub, readerPolicy, mDispatcher);
-        initialize();
-    }
-    ```
-- `EventHub`建立了`Linux`与输入设备之间的通信，`InputManager`中的`InputReader`和`InputDispatcher`负责了输入事件的读取和分发，在 **输入系统** 中，两者的确非常重要。
 
 
-#### 4.3 组件类型ANR
-- `ANR`是一套监控`Android`应用响应是否及时的机制，可以把发生`ANR`比作是 **引爆炸弹**，那么整个流程包含三部分组成：
-- **埋定时炸弹**：中控系统(`system_server`进程)启动倒计时，在规定时间内如果目标(应用进程)没有干完所有的活，则中控系统会定向炸毁(杀进程)目标。
-- **拆炸弹**：在规定的时间内干完工地的所有活，并及时向中控系统报告完成，请求解除定时炸弹，则幸免于难。
-- **引爆炸弹**：中控系统立即封装现场，抓取快照，搜集目标执行慢的罪证(`traces`)，便于后续的案件侦破(调试分析)，最后是炸毁目标。
-
-
-#### 4.4 Input类型ANR
-- `Input`类型的`ANR`在日常开发中更为常见且更复杂，比如用户或者测试反馈，点击屏幕中的UI元素导致「卡死」。
-- 少数情况下开发者能够很快定位到问题，但更常见的情况是，该问题是 **随机** 且 **难以复现** 的，导致该问题的原因也更具有综合性，比如低端设备的系统本身资源已非常紧张，或者多线程相互持有彼此需要的资源导致 **死锁** ，亦或其它复杂的情况，因此处理这类型问题就需要开发者对 **输入系统** 中的`ANR`机制有一定的了解。
-- 和组件类`ANR`不同的是，`Input`类型的超时机制并非时间到了一定就会爆炸，而是处理后续上报事件的过程才会去检测是否该爆炸，所以更像是 **扫雷** 的过程。
-- **扫雷**，对于 **输入系统** 而言，即使某次事件执行时间超过预期的时长，只要用户后续没有再生成输入事件，那么也不需要`ANR`。
-- 而只有当新一轮的输入事件到来，此时正在分发事件的窗口（即`App`应用本身）迟迟无法释放资源给新的事件去分发，这时`InputDispatcher`才会根据超时时间，动态的判断是否需要向对应的窗口提示`ANR`信息。
-- 这也正是用户在第一次点击屏幕，即使事件处理超时，也没有弹出`ANR`窗口，而当用户下意识再次点击屏幕时，屏幕上才提示出了`ANR`信息的原因。
-- 由此可见，组件类`ANR`和`Input ANR`原理上确实有所不同；除此之外，前者是在`ActivityManager`线程中处理的`ANR`信息，后者则是在`InputDispatcher`线程中处理的`ANR`
-
-
-#### 4.5 事件分发异步机制
-- 先抛出一个新的问题，对处于`system_server`进程`Native`层级的 **事件分发** 而言，其向下与 **应用进程** 的通信的过程应该是同步还是异步的？
-
-对于读者而言，不难得出答案是异步的，因为两者之间双向通信的建立是通过`SocketPair`，并且，因为`system_server`中`InputDispatcher`对事件的分发实际上是一对多的，如果是同步的，那么一旦其中一个应用分发超时，那么`InputDispatcher`线程自然被卡住，其永远都不可能进入到下一轮的事件分发中，**扫雷** 机制更是无从谈起。
-
-因此，与应用进程中事件分发不同的是，后者我们通常可以认为是在主线程中同步的，而对于整个 **输入系统** 而言，因为涉及到 **系统进程** 与多个 **应用进程** 之间异步的通信，因此其内部的实现更为复杂。
-
-因为事件分发涉及到异步回调机制，因此`InputDispatcher`需要对事件进行维护和管理，那么问题就变成了，使用什么样的数据结构去维护这些输入事件比较合适。
-
-### 4、三个队列
-
-`InputDispatcher`的源码实现中，整体的事件分发流程共使用到3个事件队列：
-
-* mInBoundQueue：用于记录`InputReader`发送过来的输入事件；
-* outBoundQueue：用于记录即将分发给目标应用窗口的输入事件；
-* waitQueue：用于记录已分发给目标应用，且应用尚未处理完成的输入事件。
-
-下文，笔者通过2轮事件分发的示例，对三个队列的作用进行简单的梳理。
-
-#### 4.1 第一轮事件分发
-
-首先`InputReader`线程通过`EventHub`监听到底层的输入事件上报，并将其放入了`mInBoundQueue`中，同时唤醒了`InputDispatcher`线程。
-
-然后`InputDispatcher`开始了第一轮的事件分发，此时并没有正在处理的事件，因此`InputDispatcher`从`mInBoundQueue`队列头部取出事件，并重置`ANR`的计时，并检查窗口是否就绪，此时窗口准备就绪，将该事件转移到了`outBoundQueue`队列中，因为应用管道对端连接正常，因此事件从`outBoundQueue`取出，然后放入了`waitQueue`队列，因为`Socket`双向通信已经建立，接下来就是 **应用进程** 接收到新的事件，然后对其进行分发。
-
-如果 **应用进程** 事件分发正常，那么会通过`Socket`向`system_server`通知完成，则对应的事件最终会从`waitQueue`队列中移除。
-
-#### 4.2 第二轮事件分发
-
-如果第一轮事件分发尚未接收到回调通知，第二轮事件分发抵达又是如何处理的呢？
-
-第二轮事件到达`InputDispatcher`时，此时`InputDispatcher`发现有事件正在处理，因此不会从`mInBoundQueue`取出新的事件，而是直接检查窗口是否就绪，若未就绪，则进入`ANR`检测状态。
-
-以下几种情况会导致进入`ANR`检测状态：
-
-> 1、目标应用不会空，而目标窗口为空。说明应用程序在启动过程中出现了问题；
-> 2、目标`Activity`的状态是`Pause`，即不再是`Focused`的应用；
-> 3、目标窗口还在处理上一个事件。
-
-读者需要理解，并非所有「目标窗口还在处理上一个事件」都会抛出`ANR`，而是需要通过检测时间，如果未超时，那么直接中止本轮事件分发，反之，如果事件分发超时，那么才会确定`ANR`的发生。
-
-这也正是将`Input`类型的`ANR`描述为 **扫雷** 的原因：这里的扫雷是指当前输入系统中正在处理着某个耗时事件的前提下，后续的每一次`input`事件都会检测前一个正在处理的事件是否超时（进入扫雷状态），检测当前的时间距离上次输入事件分发时间点是否超时。如果前一个输入事件，则会重置`ANR`的`timeout`，从而不会爆炸。
-
-至此，**输入系统** 检测到了`ANR`的发生，并向上层抛出了本次`ANR`的相关信息。
-
-
-### 05.参考资料
-- 需要列出方案设计过程的文档，包括但不局限于PM需求文档，技术参考文档等。
-- 微信ANR监测方案
-    - https://mp.weixin.qq.com/s/fWoXprt2TFL1tTapt7esYg
-- 理解Android ANR的触发原理
-    - http://gityuan.com/2016/07/02/android-anr/
-- 微信Android客户端的ANR监控方案
-    - https://mp.weixin.qq.com/s/fWoXprt2TFL1tTapt7esYg
-- 今日头条 ANR 优化实践系列
-    - https://juejin.cn/post/6947986170135445535
-    - https://juejin.cn/post/6942665216781975582
-- 今日头条 ANR 优化实践系列
-    - https://mp.weixin.qq.com/s/_Z6GdGRVWq-_JXf5Fs6fsw
-- Android SIGQUIT(3) 信号拦截与处理
-    - https://mp.weixin.qq.com/s?__biz=Mzg4MjE5OTI4Mw==&mid=2247494779&idx=1&sn=b8c84e8e8389543cfbda93cbadd1593c&chksm=cf58f3e7f82f7af1ffff70e1c9f2d6a6a0d0a4b5e4f3f3dd42e9d79fd950bfa32913942ec6d3&scene=178&cur_album_id=2495132597375975425#rd
 
