--- a/Read/ReadMeWiki/01.大型方案/04.轻量级线程池实践.md
+++ b/Read/ReadMeWiki/01.大型方案/04.轻量级线程池实践.md
@@ -20,6 +20,7 @@
     - 3.4 线程任务耗时统计
     - 3.5 线程数据共享
     - 3.6 多线程并发优化
+    - 3.7 如何查看程序线程数
 - 04.线程池封装思路
     - 4.1 封装总体思路
     - 4.2 主和子线程通信
@@ -160,6 +161,8 @@
 
 #### 3.6 多线程并发优化
 
+
+#### 3.7 如何查看程序线程数
 
 
 ### 04.线程池封装思路
