--- a/Read/ReadMeWiki/06.Framework/18.Android事件拦截.md
+++ b/Read/ReadMeWiki/06.Framework/18.Android事件拦截.md
@@ -199,7 +199,22 @@
 - 当一个点击事件发生时，事件最先传到Activity的dispatchTouchEvent()进行事件分发
     - 具体是由Activity的Window来完成，其实是由Activity---PhoneWindow---DecorView---FrameLayout---ViewGroup
 - Activity的dispatchTouchEvent()源码分析
-    > Activity#dispatchTouchEvent()，
+    > Activity#dispatchTouchEvent()，这个是Activity处理事件分发的入口
+        > 第一步：判断MotionEvent是否是down事件，当手指按下的时候调用onUserInteraction()方法，该方法空实现（从注释得知：当此activity在栈顶时，触屏点击按home，back，menu键等都会触发此方法，用于屏保）
+        > 第二步：调用getWindow().superDispatchTouchEvent(ev)，接着从PhoneWindow--->DecorView--->FrameLayout--->最终是ViewGroup的dispatchTouchEvent()
+        > 执行getWindow().superDispatchTouchEvent(ev)实际上是执行了ViewGroup.dispatchTouchEvent(event)，这样事件就从 Activity 传递到了 ViewGroup 
+- 当一个点击事件发生时，调用顺序如下
+    - 1.事件最先传到Activity的dispatchTouchEvent()进行事件分发
+    - 2.调用Window类实现类PhoneWindow的superDispatchTouchEvent()
+    - 3.调用DecorView的superDispatchTouchEvent()
+    - 4.最终调用DecorView父类的dispatchTouchEvent()，**即ViewGroup的dispatchTouchEvent()**
+
+
+
+
+
+
+
 
 
 
