--- a/Read/ReadMeWiki/00.方案实践/01.崩溃捕获设计实践.md
+++ b/Read/ReadMeWiki/00.方案实践/01.崩溃捕获设计实践.md
@@ -48,12 +48,14 @@
 
 
 #### 1.2 遇到问题
-- `Crash`率多少算优秀呢？在明确了目标之后，我们才能正确认识我们的工作到底有什么作用。
+- `Crash`率多少算优秀呢？
+    - 在明确了目标之后，我们才能正确认识我们的工作到底有什么作用。降低崩溃率到我们的指标……
+
 
 
 #### 1.3 基础概念介绍
-- 崩溃现场是我们的“第一案发现场”，它保留着很多有价值的线索。
-    - 接下来我们具体来看看在崩溃现场，确认重点，内存&线程需特别注意，很多崩溃都是由于它们使用不当造成的。如何去分析日志
+- 崩溃现场是“第一案发现场”，它保留着很多有价值的线索。
+    - 接下来具体来看看在崩溃现场，确认重点，内存&线程需特别注意，很多崩溃都是由于它们使用不当造成的。如何去分析日志
 - 确认严重程度
     - 如果一时半会解决不了，那么能否先止损，采用降级策略。延期修复，如果是非要解决，那么解决完后即通过灰度测试发版，及时跟进问题。
 - 崩溃基本信息
@@ -83,8 +85,9 @@
 ### 02.App崩溃流程
 #### 2.1 为何崩溃推出App
 - 线程中抛出异常以后的处理逻辑
-    - 一旦线程出现抛出异常，并且我们没有捕捉的情况下，`JVM`将调用`Thread`中的`dispatchUncaughtException`方法把异常传递给线程的未捕获异常处理器。
-- 既然`Android`遇到异常会发生崩溃，然后找一些哪里用到设置`setDefaultUncaughtExceptionHandler`，即可定位到`RuntimeInit`类。
+    - 一旦线程出现抛出异常，并且在没有捕捉的情况下，`JVM`将调用`Thread`中的`dispatchUncaughtException`方法把异常传递给线程的未捕获异常处理器。
+- 找到Android源码中处理异常捕获入口
+    - 既然`Android`遇到异常会发生崩溃，然后找一些哪里用到设置`setDefaultUncaughtExceptionHandler`，即可定位到`RuntimeInit`类。
     - 即在这个里面设置异常捕获`KillApplicationHandler`，发生异常之后，会调用`handleApplicationCrash`打印输出崩溃`crash`信息，最后会杀死应用`app`。
 
 
@@ -120,10 +123,11 @@
         }
     }
     ```
-- 得出结论
+- 得出结论如下所示
     - 其实在`fork`出`app`进程的时候，系统已经为`app`设置了一个异常处理，并且最终崩溃后会直接导致执行该`handler`的`finally`方法最后杀死app直接退出app。
 - 如何自己捕获异常
     - 如果你要自己处理，你可以自己实现`Thread.UncaughtExceptionHandler`。而调用`setDefaultUncaughtExceptionHandler`多次，最后一次会覆盖之前的。
+
 
 
 ##### 2.2.2 崩溃日志的记录
@@ -145,10 +149,22 @@
         mAppErrors.crashApplication(r, crashInfo);
     }
     ```
+- 崩溃日志封装流程如下所示
+    > ActivityManagerService#handleApplicationCrash()，在这个方法里处理崩溃日志信息
+    > ActivityManagerService#findAppProcess()，这个是根据binder去找对应的crash的ProcessRecord对象
+    > ActivityManagerService#handleApplicationCrashInner()，这个方法很关键
+    > ActivityManagerService#addErrorToDropBox()，这个就是将crash，anr，装到盒子里。这个主要在下面会说到
+    > ActivityManagerService#appendDropBoxProcessHeaders，这个方法是拼接app的进程，pid，package包名等等
+
 
 
 
 #### 2.3 Native崩溃流程
+- Native崩溃监控入口流程
+    > SystemServer#main()，在fork出system_server进程后执行main方法，然后创建该对象并且执行run方法做初始化各种服务逻辑
+    > SystemServer#run()，在这个线程run方法中，调用startOtherServices开启各种服务逻辑
+    > SystemServer#startOtherServices()，在这个方法里，是系统system_server进程开启众多服务，比如IMS输入事件服务，NMS通知栏服务等
+    > ActivityManagerService#startObservingNativeCrashes()，在这个类中创建NativeCrashListener去监控native崩溃
 - `native_crash`，顾名思义，就是`native`层发生的`crash`。其实他是通过一个`NativeCrashListener`线程去监控的。
     ``` java
     final class NativeCrashListener extends Thread {
@@ -344,9 +360,11 @@
 - 在线程调用 exit 退出时，如果有未捕获的异常，则会调用 Thread.dispatchUncaughtException 方法。这个则是java层处理异常的入口！
 
 
+
+
 #### 3.5 理解异常栈轨迹链
 - 来看一个简单的崩溃日志，如下所示：
-    - 那么这个崩溃日志，是怎么形成的崩溃异常链的？
+    - 那么这个崩溃日志，是怎么形成的崩溃异常链的？简单来说，在方法调用链路中，存在栈管理。
     ``` java
     Process: com.yc.ycandroidtool, PID: 16060
     java.lang.NullPointerException: Attempt to invoke virtual method 'void android.app.Activity.finish()' on a null object reference
@@ -382,6 +400,29 @@
     - 当程序触发异常时，JVM 会检测触发异常的字节码的索引值落到哪个异常表的 from-to 范围内，然后再判断异常类型是否匹配，匹配就开始执行 target 处字节码处理该异常。
 - 最后是finally代码块的编译
     - finally 代码块一定会运行的（除非虚拟机退出了）。那么它是如何实现的呢？其实是一个比较笨的办法，当前 JVM 的做法是，复制 finally 代码块的内容，分别放在所有可能的执行路径的出口中。
+- 如何理解Java函数调用栈桢呢
+    - 操作系统给每个线程分配了一块独立的内存空间，这块内存被组织成“栈”这种结构, 用来存储函数调用时的临时变量。每进入一个函数，就会将临时变量作为一个栈帧入栈，当被调用函数执行完成，返回之后，将这个函数对应的栈帧出栈。
+    ```
+    int main() {
+       int a = 1; 
+       int ret = 0;
+       int res = 0;
+       ret = add(3, 5);
+       res = a + ret;
+       printf("%d", res);
+       reuturn 0;
+    }
+    
+    int add(int x, int y) {
+       int sum = 0;
+       sum = x + y;
+       return sum;
+    }
+    ```
+    - 从代码中我们可以看出，main() 函数调用了 add() 函数，获取计算结果，并且与临时变量 a 相加，最后打印 res 的值。
+    - 为了让你清晰地看到这个过程对应的函数栈里出栈、入栈的操作，我画了一张图。图中显示的是，在执行到 add() 函数时，函数调用栈的情况。
+    - ![image](https://img-blog.csdnimg.cn/2dfde6968cd44f7c88069ecd70142d0d.png)
+
 
 
 
@@ -455,6 +496,7 @@
     ```
     - 机型、系统、厂商、CPU、ABI、Linux 版本等。–> 寻找共性
     - 设备状态：是否 root、是否是模拟器。一些问题是由 Xposed 或多开软件造成，对这部分问题我们要区别对待。
+    - 
 - 内存信息
     - OOM、ANR、虚拟内存耗尽等，很多崩溃都跟内存有直接关系。
     - 系统剩余内存。关于系统内存状态，可以直接读取文件 /proc/meminfo。当系统可用内存很小（低于 MemTotal 的 10%）时，OOM、大量 GC、系统频繁自杀拉起等问题都非常容易出现。
